[package]
name = "gw_concurrency"
version = "0.1.0"
edition = "2021"

[lib]
name = "opcode"

[[bin]]
name = "opcs"
path = "src/bin/server.rs"

[dependencies]
displaydoc = "0.2.3"
futures = "0.3.19"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["full"] }
tokio-stream = "0.1.8"
uuid = { version = "0.8.2", features = ["v4"] }
warp = "0.3.2"

[features]
